2001-07-26  Bradford Hovinen  <hovinen@ximian.com>

	* kill-gnomecc.sh: Don't kill oafd for fear that someone may be
	running Evolution. Kill bonobo-moniker-archiver after everything
	else is dead. Redirect errors to /dev/null. Kill the mouse
	properties capplet, too.

	* gnomecc.glade: Don't make the main window modal

	* capplet-dir.c (capplet_control_launch): Remove check for capplet
	already running

2001-07-25  Chema Celorio  <chema@celorio.com>

	* capplet-dir-view.c (about_menu_cb): jrb's name had a typo

	* Makefile.am (EXTRA_DIST): don't this Gnome.directory.in this will
	be generated at the users box by a sed from Gnome.directory.in.in

2001-07-25  Richard Hestilow  <hestilow@ximian.com>

	* main.c (main): Move capplet-launching code into an idle handler.
	Bonobo sucks like that.

	* capplet-dir.c (capplet_activate): Remove the check for gnomecc,
	it was causing grief with bonobo. Story at 11.

2001-07-24  Chema Celorio  <chema@celorio.com>

	* capplet-dir-view-html.c (html_create): set the usize of hte
	side bar a bit smaller. Also set the size of the glade file a bit
	wider

	* capplet-dir-view.c (capplet_dir_view_load_dir): set the title
	of the window to "Gnome Control Center : foo"

2001-07-24  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_control_launch): Set moniker property
	manually
	(capplet_control_launch): Remove double-free of the moniker
	(capplet_control_launch): Release and unref the property control
	in the event of an error
	(capplet_control_launch): Conclude that the capplet is already
	running only when the exception type is
	Bonobo/Moniker/InterfaceNotFound

2001-07-23  Bradford Hovinen  <hovinen@ximian.com>

	* capplet-dir.c (capplet_control_launch): Put up an error dialog
	and abort the process if the capplet reports an error trying to
	resolve its moniker
	(capplet_control_launch): Don't connect the app's button signals
	if the app has just been destroyed

2001-07-20  Chema Celorio  <chema@celorio.com>
